--- a/src/components/PageHeader/styles.css
+++ b/src/components/PageHeader/styles.css
@@ -36,12 +36,21 @@
 .page-header .header-content strong {
     font: 700 3.6rem Archivo;
     line-height: 4.2rem;
-    color: var(--color-title-primary);
+    color: var(--color-background);
+}
+
+.page-header .header-content p {
+  max-width: 30rem;
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  color: var(--color-text-in-primary);
+  margin-top: 2.4rem;
+
 }
 
 @media (min-width: 700px) {
     .page-header {
-        height: 340px;
+      height: 340px;
     }
 
     .page-header .top-bar-container {
@@ -54,13 +63,13 @@
         margin: 0 auto;
         padding-bottom: 48px;
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        flex-direction: column;
     } 
 
     .page-header .header-content strong {
-        max-width: 400px;
+        max-width: 350px;
     }
 
 
