--- a/src/components/TeacherItem/styles.css
+++ b/src/components/TeacherItem/styles.css
@@ -1,3 +1,4 @@
+
 .teacher-item {
   background: var(--color-box-base);
   border: 1px solid var(--color-line-in-white);
@@ -25,10 +26,11 @@
 .teacher-item header div strong {
   font: 700 2.4rem Archivo;
   display: block;
+  color: var(--color-text-title);
 }
 
 .teacher-item header div span {
-  font: 1.6rem;
+  font-size: 1.6rem;
   display: block;
   margin-top: 0.4rem;
 }  
@@ -55,24 +57,26 @@
   display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer a {
   width: 20rem;
   height: 5.6rem;
   background: var(--color-secondary);
   color: var(--color-button-text);
   border: 0;
-  border-radius: 0.8;
+  border-radius: 0.8rem;
   cursor: pointer;
   font: 700 1.4rem Archivo;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   transition: 0.2s;
+  text-decoration: none;
 }
 
-.teacher-item footer button:hover {
+.teacher-item footer a:hover {
   background-color: var(--color-secondary-dark);
 }
+
 @media(min-width: 700px) {
   
   .teacher-item header, 
@@ -93,7 +97,7 @@
       margin-left: 1.6rem;
   }
 
-  .teacher-item footer button {
+  .teacher-item footer a {
       width: 24.5rem;
       font-size: 1.6rem;
       justify-content: center;
